# ResRenderer

./: CMakeLists.txt  README.md
include/: ResCommon.hpp  ResMath.hpp  ResRenderer.hpp
resource/: shader.glsl
sample/: Application.cpp
src/: ResRendererImpl.cpp  ResRendererImpl_DX.cpp  ResRendererImpl_DX.hpp  ResRendererImpl_Ogl.cpp  ResRendererImpl_Ogl.hpp  ResRendererImpl_Ogl_Win.cpp
